fix overflow for <pre>

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -121,6 +121,7 @@ img {display: block;}
 		background: #eee;
 		color: $main-font-color;
 		font-family: currier-new, monospace;
+		overflow: auto;
 	}
 	ul {
 		margin-left: 20px;
